samples/_failures_safe/1761421441_5820b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10ecabd6.c: In function ‘find_shortest_path’:
./samples/SAFE/__tmp_10ecabd6.c:143:9: error: expected declaration or statement at end of input
  143 |         printf(" (distance: %d)\n", distance[end]);
      |         ^~~~~~
./samples/SAFE/__tmp_10ecabd6.c:143:9: error: expected declaration or statement at end of input
